spacing fixed for menu

--- a/app/assets/stylesheets/menu.scss
+++ b/app/assets/stylesheets/menu.scss
@@ -12,6 +12,7 @@
 .menu-body-content-container {
     display: flex;
     flex-direction: row;
+    justify-content: center;
     margin-top: 30px;
 }
 
